Fixed vertical scrollbar in syntax highlighter

--- a/resources/assets/sass/frontend/app.scss
+++ b/resources/assets/sass/frontend/app.scss
@@ -116,9 +116,12 @@ footer {
     min-height: 0 !important;
 }
 
-
 .sidenav-submenu {
     margin-left: 50px !important;
     padding-top: 5px !important;
     padding-bottom: 5px !important;
+}
+
+.syntaxhighlighter {
+    overflow: hidden !important;
 }
